force-app/main/default/objects/QuoteLineItem/fields/Category_Based_Discount__c.field-meta.xml
<CustomField>
    <fullName>Category_Based_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Category Based Discount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>