force-app/main/default/objects/QuoteLineItem/fields/Offered_Discount__c.field-meta.xml
<CustomField>
    <fullName>Offered_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Offered Discount</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>