force-app/main/default/objects/QuoteLineItem/fields/Quantitiy_Tier_Discount__c.field-meta.xml
<CustomField>
    <fullName>Quantitiy_Tier_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantitiy Tier Discount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>